Start using RoutineDefintions to create Routines (#11)
RoutineDefinitions are to Routines what TaskDefinitions are to Tasks.
